# inventox

./: .env  .env.production  README.md  alembic.ini  inventory.db  pyproject.toml
alembic/: env.py
alembic/versions/: 58415b03e92a_create_items_table.py  59f50804e706_create_items_table.py
app/: database.py  main.py
app/api/: inventory.py
app/models/: __init__.py  item.py
app/schemas/: item.py
frontend/static/css/: style.css
frontend/static/js/: app.js
frontend/templates/: index.html
tests/: test_inventory_endpoint.py
